fix(table): Vertical align
- Fixed vertical text align in tables

--- a/themes/hugo-docs/assets/elements/table.scss
+++ b/themes/hugo-docs/assets/elements/table.scss
@@ -28,6 +28,6 @@ td {
   min-width: $space-l;
   padding: $space-xs;
   text-align: left;
-  vertical-align: left;
+  vertical-align: top;
   word-break: initial;
 }
